--- a/style.css
+++ b/style.css
@@ -4,5 +4,59 @@ body {
     font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
 
+.header {
+    background-color: #1f2937;
+    color: white;
+    display: flex;
+    padding-bottom: 100px;
+}
+
+.header-logo {
+    height: 50px;
+    width: 50px;
+    padding: 15px;
+    margin-left: 200px;
+}
+
+.header-logo-text {
+    display: flex;
+    line-height: 80px;
+}
+
+.hero {
+    background-color: #1f2937;
+    color: white;
+    display: flex;
+}
+
+.hero-title {
+    font-size: 48px;
+    font-weight: 900;
+}
+
+.hero-pic {
+    max-width: 300px;
+}
+
+
+ul {
+    list-style-type: none;
+    padding: 0;
+    padding-right: 200px;
+    margin: 0;
+    margin-left: auto;
+    display: flex;
+    flex-direction: row;
+    gap: 16px;
+    line-height: 80px;
+
+}
+
+a {
+    text-decoration: none;
+    color: white;
 }
