--- a/style.css
+++ b/style.css
@@ -25,23 +25,39 @@ body {
 .header-logo-text {
     display: flex;
     line-height: 80px;
+    font-size: 18px;
+    color:#e5e7eb;
 }
 
 .hero {
     background-color: #1f2937;
-    color: white;
     display: flex;
+    justify-content: space-between;
+    padding-bottom: 100px;
+}
+
+.title-container {
+    display: flex;
+    flex-direction: column;
 }
 
 .hero-title {
     font-size: 48px;
     font-weight: 900;
+    padding-left: 215px;
+    color: white;
+}
+
+.hero-secondary {
+    padding-left: 215px;
+    font-size: 18px;
+    color: #e5e7eb;
 }
 
 .hero-pic {
-    max-width: 300px;
+    max-width: 400px;
+    padding-right: 200px;
 }
-
 
 ul {
     list-style-type: none;
@@ -53,10 +69,10 @@ ul {
     flex-direction: row;
     gap: 16px;
     line-height: 80px;
-
+    font-size: 18px;
 }
 
 a {
     text-decoration: none;
-    color: white;
+    color: #e5e7eb;
 }
