--- a/style.css
+++ b/style.css
@@ -98,14 +98,21 @@ a {
 .content {
     display: flex;
     justify-content: center;
+    gap: 100px;
 }
 
 .info {
-    display: flex;
+    padding-top: 50px;
+}
+
+.text {
+    color: grey;
+    text-align: center;
+    padding-top: 20px;
 }
 
 .info-img {
-    display: flex;
-    max-width: 150px;
-    height: 100px;
+    display: inline-block;
+    height: 200px;
+    width: 200px;
 }
