--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@ body {
     color: white;
     display: flex;
     padding-bottom: 100px;
+    justify-content: space-between;
 }
 
 .header-logo {
     height: 50px;
     width: 50px;
     padding: 15px;
-    margin-left: 200px;
 }
 
 .header-logo-text {
@@ -74,7 +74,6 @@ ul {
     padding: 0;
     padding-right: 215px;
     margin: 0;
-    margin-left: auto;
     display: flex;
     flex-direction: row;
     gap: 16px;
@@ -98,7 +97,8 @@ a {
 .content {
     display: flex;
     justify-content: center;
-    gap: 100px;
+    gap: 75px;
+    padding-bottom: 50px;
 }
 
 .info {
@@ -115,4 +115,80 @@ a {
     display: inline-block;
     height: 200px;
     width: 200px;
+    border-radius: 15px;
+}
+
+.below-content {
+    background-color: #e5e7eb;
+    display: flex;
+    flex-direction: column;
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.quote {
+    font-size: 36px;
+    font-style: italic;
+    color: #1f2937;
+    display: flex;
+    padding-left: 215px;
+    padding-right: 215px;
+}
+
+.content-name {
+    display: flex; 
+    justify-content: flex-end;
+    padding-right: 215px;
+    font-size: 24px;
+}
+
+.call-to-action {
+    display: flex;
+    justify-content: center;
+    padding: 100px;
+    color: white;
+}
+
+.action-border {
+    background-color: #3882f6;
+    border-radius: 15px;
+    width: 1000px;  
+    height: 150px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.action-cotainer {
+    display: flex;
+    flex-direction: column;
+}
+
+.sign-up-title {
+    font-weight: bold;
+    font-size: 24px;
+}
+
+.sign-up-now {
+    font-size: 16px;
+}
+
+.button {
+    background-color: #3882f6;
+    color: white;
+    font-size: 15px;
+    border: 2px solid white;
+    border-radius: 4px;
+    width: 125px;
+    height: 30px;
+}
+
+.footer {
+    padding-top: 25px;
+    padding-bottom: 25px;
+    background-color: #1f2937;
+    color: #e5e7eb;
+    vertical-align: center;
+    text-align: center;
 }
