--- a/style.css
+++ b/style.css
@@ -1,194 +1,197 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
-
+ 
 body {
-    font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    margin: 0;
-    min-height: 100vh;
-    display: flex;
-    flex-direction: column;
+   font-family: Roboto, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+   margin: 0;
+   min-height: 100vh;
+   display: flex;
+   flex-direction: column;
 }
-
+ 
 .header {
-    background-color: #1f2937;
-    color: white;
+   background-color: #1f2937;
+   color: white;
+   display: flex;
+   padding-bottom: 100px;
+    justify-content: space-evenly;
+}
+ 
+.header-container {
     display: flex;
-    padding-bottom: 100px;
-    justify-content: space-between;
 }
 
 .header-logo {
-    height: 50px;
-    width: 50px;
-    padding: 15px;
+   height: 50px;
+   width: 50px;
+   padding: 15px;
 }
-
+ 
 .header-logo-text {
-    display: flex;
-    line-height: 80px;
-    font-size: 18px;
-    color:#e5e7eb;
+   display: flex;
+   line-height: 80px;
+   font-size: 18px;
+   color:#e5e7eb;
 }
-
+ 
 .hero {
-    background-color: #1f2937;
-    display: flex;
-    justify-content: space-between;
-    padding-bottom: 100px;
+   background-color: #1f2937;
+   display: flex;
+   justify-content: space-evenly;
+   padding-bottom: 100px;
 }
-
+ 
 .title-container {
-    display: flex;
-    flex-direction: column;
-    padding-left: 215px;
+   display: flex;
+   flex-direction: column;
 }
-
+ 
 .hero-title {
-    font-size: 48px;
-    font-weight: 900;
-    color: white;
+   font-size: 48px;
+   font-weight: 900;
+   color: white;
 }
-
+ 
 .hero-secondary {
-    font-size: 18px;
-    color: #e5e7eb;
+   font-size: 18px;
+   color: #e5e7eb;
 }
-
+ 
 .hero-button {
-    background-color: #3882f6;
-    border-radius: 12px;
-    height: 35px;
-    width: 125px;
-    margin-top: 10px;
-    border: none 2px;
-    color: white;
-    font-weight: bold;
+   background-color: #3882f6;
+   border-radius: 12px;
+   height: 35px;
+   width: 125px;
+   margin-top: 10px;
+   border: none 2px;
+   color: white;
+   font-weight: bold;
 }
-
+ 
 .hero-pic {
-    max-width: 400px;
-    padding-right: 215px;
+   max-width: 400px;
 }
-
+ 
 ul {
-    list-style-type: none;
-    padding: 0;
-    padding-right: 215px;
-    margin: 0;
-    display: flex;
-    flex-direction: row;
-    gap: 16px;
-    line-height: 80px;
-    font-size: 18px;
+   list-style-type: none;
+   padding: 0;
+   margin: 0;
+   display: flex;
+   flex-direction: row;
+   gap: 16px;
+   line-height: 80px;
+   font-size: 18px;
 }
-
+ 
 a {
-    text-decoration: none;
-    color: #e5e7eb;
+   text-decoration: none;
+   color: #e5e7eb;
 }
-
+ 
 .content-header {
-    font-size: 32px;
-    color: #1f2937;
-    text-align: center;
-    font-weight: bolder;
-    padding-top: 50px;
+   font-size: 32px;
+   color: #1f2937;
+   text-align: center;
+   font-weight: bolder;
+   padding-top: 50px;
 }
-
+ 
 .content {
-    display: flex;
-    justify-content: center;
-    gap: 75px;
-    padding-bottom: 50px;
+   display: flex;
+   justify-content: center;
+   gap: 75px;
+   padding-bottom: 50px;
 }
-
+ 
 .info {
-    padding-top: 50px;
+   padding-top: 50px;
 }
-
+ 
 .text {
-    color: grey;
-    text-align: center;
-    padding-top: 20px;
+   color: grey;
+   text-align: center;
+   padding-top: 20px;
 }
-
+ 
 .info-img {
-    display: inline-block;
-    height: 200px;
-    width: 200px;
-    border-radius: 15px;
+   display: inline-block;
+   height: 200px;
+   width: 200px;
+   border-radius: 15px;
+   border: 4px solid #3882f6;
 }
-
+ 
 .below-content {
-    background-color: #e5e7eb;
-    display: flex;
-    flex-direction: column;
-    padding-top: 100px;
-    padding-bottom: 100px;
+   background-color: #e5e7eb;
+   display: flex;
+   flex-direction: column;
+   padding-top: 100px;
+   padding-bottom: 100px;
 }
-
+ 
 .quote {
-    font-size: 36px;
-    font-style: italic;
-    color: #1f2937;
-    display: flex;
-    padding-left: 215px;
-    padding-right: 215px;
+   font-size: 36px;
+   font-style: italic;
+   color: #1f2937;
+   display: flex;
+   padding-left: 215px;
+   padding-right: 215px;
 }
-
+ 
 .content-name {
-    display: flex; 
-    justify-content: flex-end;
-    padding-right: 215px;
-    font-size: 24px;
+   display: flex;
+   justify-content: flex-end;
+   padding-right: 215px;
+   font-size: 24px;
 }
-
+ 
 .call-to-action {
-    display: flex;
-    justify-content: center;
-    padding: 100px;
-    color: white;
+   display: flex;
+   justify-content: center;
+   padding: 100px;
+   color: white;
 }
-
+ 
 .action-border {
-    background-color: #3882f6;
-    border-radius: 15px;
-    width: 1000px;  
-    height: 150px;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: center;
+   background-color: #3882f6;
+   border-radius: 15px;
+   width: 900px; 
+   height: 150px;
+   display: flex;
+   flex-direction: row;
+   justify-content: space-evenly;
+   align-items: center;
 }
-
+ 
 .action-cotainer {
-    display: flex;
-    flex-direction: column;
+   display: flex;
+   flex-direction: column;
 }
-
+ 
 .sign-up-title {
-    font-weight: bold;
-    font-size: 24px;
+   font-weight: bold;
+   font-size: 24px;
 }
-
+ 
 .sign-up-now {
-    font-size: 16px;
+   font-size: 16px;
 }
-
+ 
 .button {
-    background-color: #3882f6;
-    color: white;
-    font-size: 15px;
-    border: 2px solid white;
-    border-radius: 4px;
-    width: 125px;
-    height: 30px;
+   background-color: #3882f6;
+   color: white;
+   font-size: 15px;
+   border: 2px solid white;
+   border-radius: 4px;
+   width: 125px;
+   height: 30px;
+}
+ 
+.footer {
+   padding-top: 25px;
+   padding-bottom: 25px;
+   background-color: #1f2937;
+   color: #e5e7eb;
+   vertical-align: center;
+   text-align: center;
 }
 
-.footer {
-    padding-top: 25px;
-    padding-bottom: 25px;
-    background-color: #1f2937;
-    color: #e5e7eb;
-    vertical-align: center;
-    text-align: center;
-}
