--- a/style.css
+++ b/style.css
@@ -122,26 +122,28 @@ a {
  
 .below-content {
    background-color: #e5e7eb;
-   display: flex;
-   flex-direction: column;
    padding-top: 100px;
    padding-bottom: 100px;
 }
  
+.quote-container {
+    display: flex;
+    flex-direction: column;
+    width: 1000px;
+    margin: auto;
+}
+
 .quote {
    font-size: 36px;
    font-style: italic;
    color: #1f2937;
    display: flex;
-   padding-left: 215px;
-   padding-right: 215px;
 }
  
 .content-name {
    display: flex;
-   justify-content: flex-end;
-   padding-right: 215px;
    font-size: 24px;
+    margin-left: auto;
 }
  
 .call-to-action {
